--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Coroutines Room with a View</string>
+    <string name="add_word">Add word</string>
 </resources>
